--- a/docs/authentication/saml/azure.mdx
+++ b/docs/authentication/saml/azure.mdx
@@ -18,7 +18,7 @@ description: Learn how to integrate Microsoft Azure AD via SAML SSO.
   ]}
 >
 
-- Use Azure Active Directory (Azure AD) to enable single sign-on (SSO) for your Clerk application.
+- Use Microsoft Azure Active Directory (Azure AD) to enable single sign-on (SSO) via SAML for your Clerk application.
 
 </TutorialHero>
 
