--- a/docs/authentication/saml/azure.mdx
+++ b/docs/authentication/saml/azure.mdx
@@ -22,7 +22,7 @@ description: Learn how to integrate Microsoft Azure AD via SAML SSO.
 
 </TutorialHero>
 
-Integrating Azure AD with Clerk allows you to use Azure AD as an identity provider for your Clerk application. This means that you can use Azure AD to authenticate users and manage their access to your application.
+Integrating Microsoft Azure AD with Clerk allows you to use it as an Identity Provider for your Clerk application to authenticate your users and manage their access to your application via SAML SSO.
 
 ## Tutorial
 
