--- a/docs/authentication/saml/azure.mdx
+++ b/docs/authentication/saml/azure.mdx
@@ -104,7 +104,7 @@ Choose the "SAML" option.
 ### Basic SAML Configuration
 1. Find and click on the edit button for the Basic SAML Configuration.
 2. Copy the "Identifier (Entity ID)" from the Clerk Dashboard and paste it into this field.
-3. Copy the "Reply URL (Assertion Consumer Service URL)" from the Clerk Dashboard and paste them into this FileSystemDirectoryHandle.
+3. Copy the "Reply URL (Assertion Consumer Service URL)" from the Clerk Dashboard and paste it into this field.
 Once those fields are filled out, click "Save" at the top of the page.
 
 <Images 
