--- a/docs/authentication/saml/google.mdx
+++ b/docs/authentication/saml/google.mdx
@@ -1,6 +1,6 @@
 ---
-title: Integrate Google SAML with Clerk
-description: Learn how to integrate .
+title: Google Workspace
+description: Learn how to integrate Google Workspace via SAML SSO.
 ---
 
 # Integrate Google SAML with Clerk
