--- a/docs/authentication/saml/okta.mdx
+++ b/docs/authentication/saml/okta.mdx
@@ -3,7 +3,7 @@ title: Integrate Okta SAML with Clerk
 description: Learn how to integrate .
 ---
 
-# Integrate Okta SAML with Clerk
+# Okta Workforce
 
 <TutorialHero
   beforeYouStart={[
