--- a/docs/authentication/saml/google.mdx
+++ b/docs/authentication/saml/google.mdx
@@ -18,7 +18,7 @@ description: Learn how to integrate Google Workspace via SAML SSO.
   ]}
 >
 
-- Use Google SAML to authenticate users in your Clerk application.
+- Use Google Workspace to enable single sign-on (SSO) via SAML for your Clerk application.
 
 </TutorialHero>
 
