--- a/docs/authentication/saml/okta.mdx
+++ b/docs/authentication/saml/okta.mdx
@@ -22,7 +22,7 @@ description: Learn how to integrate .
 
 </TutorialHero>
 
-Integrating Okta with Clerk allows you to use Okta as an identity provider for your Clerk application. This means that you can use Okta to authenticate users and manage their access to your application.
+Integrating Okta Workforce with Clerk allows you to use it as an Identity Provider for your Clerk application to authenticate your users and manage their access to your application via SAML SSO.
 
 ## Tutorial
 
