--- a/docs/authentication/saml/okta.mdx
+++ b/docs/authentication/saml/okta.mdx
@@ -18,7 +18,7 @@ description: Learn how to integrate .
   ]}
 >
 
-- Use Okta as an identity provider for your Clerk application to authenticate users and manage their access to your application.
+- Use Okta Workforce to enable single sign-on (SSO) via SAML for your Clerk application.
 
 </TutorialHero>
 
