--- a/docs/authentication/saml/okta.mdx
+++ b/docs/authentication/saml/okta.mdx
@@ -32,7 +32,7 @@ Integrating Okta Workforce with Clerk allows you to use it as an Identity Provid
 
 <Steps>
 
-### Setup Clerk SAML Connection
+### Setup Clerk Enterprise Connection
 1. Create a new Enterprise Connection in the Clerk Dashboard. 
 2. Fill out the form with the details for your Okta Application.
 
