--- a/docs/authentication/saml/google.mdx
+++ b/docs/authentication/saml/google.mdx
@@ -22,7 +22,7 @@ description: Learn how to integrate Google Workspace via SAML SSO.
 
 </TutorialHero>
 
-Integrating Google SAML with Clerk process involves setting up a SAML application in Google Cloud and configuring it to work with Clerk. This tutorial will guide you through the process of setting up Google SAML and integrating it with Clerk.
+Integrating Google Workspace with Clerk allows you to use it as an Identity Provider for your Clerk application to authenticate your users and manage their access to your application via SAML SSO. This tutorial will guide you through the process of setting up Google SAML and integrating it with Clerk.
 
 ## Tutorial
 
