--- a/docs/authentication/saml/google.mdx
+++ b/docs/authentication/saml/google.mdx
@@ -33,7 +33,7 @@ Integrating Google Workspace with Clerk allows you to use it as an Identity Prov
 
 <Steps>
 
-### Setup Clerk SAML Connection
+### Setup Clerk Enterprise Connection
 1. Create a new Enterprise Connection in the Clerk Dashboard. 
 2. Fill out the form with the details for your Google Application.
 
