--- a/docs/authentication/saml/azure.mdx
+++ b/docs/authentication/saml/azure.mdx
@@ -32,7 +32,7 @@ Integrating Microsoft Azure AD with Clerk allows you to use it as an Identity Pr
 
 <Steps>
 
-### Setup Clerk SAML Connection
+### Setup Clerk Enterprise Connection
 
 1. Create a new Enterprise Connection in the Clerk Dashboard. 
 2. Fill out the form with the details for your Azure AD application.
