--- a/docs/authentication/saml/okta.mdx
+++ b/docs/authentication/saml/okta.mdx
@@ -1,6 +1,6 @@
 ---
-title: Integrate Okta SAML with Clerk
-description: Learn how to integrate .
+title: Okta Workforce
+description: Learn how to integrate Okta Workforce via SAML SSO.
 ---
 
 # Okta Workforce
