--- a/docs/authentication/saml/google.mdx
+++ b/docs/authentication/saml/google.mdx
@@ -3,7 +3,7 @@ title: Google Workspace
 description: Learn how to integrate Google Workspace via SAML SSO.
 ---
 
-# Integrate Google SAML with Clerk
+# Google Workspace
 
 <TutorialHero
   beforeYouStart={[
