--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -5,7 +5,8 @@ description: Add authentication and user management to your Next.js app with Cle
 
 # Next.js Quickstart
 
-Protect your Next.js application with Clerk auth in ten minutes. This guide will show you how to install Clerk, update your middleware and embed our <UserButton /> component. 
+Protect your Next.js application with Clerk auth in ten minutes. This guide will show you how to install Clerk, update your middleware and embed our `<UserButton />` component. 
+
 
 <Steps>
 
