update saml connection tutorial

--- a/docs/authentication/saml/overview.mdx
+++ b/docs/authentication/saml/overview.mdx
@@ -5,47 +5,30 @@ description: Clerk supports Enterprise SSO via the SAML protocol so that you can
 
 # SAML (Beta)
 
-Clerk supports Enterprise SSO via the SAML protocol so that you can create authentication strategies for Identity Providers, such as Okta.
+Clerk supports Enterprise SSO via the SAML protocol so that you can create authentication strategies for an Identity Provider (IdP). Currently, Clerk supports the following IdPs for Enterprise SSO:
+
+- [Microsoft Azure AD](https://learn.microsoft.com/en-us/entra/fundamentals/whatis)
+- [Google Workspace](https://workspace.google.com/)
+- [Okta Workforce](https://www.okta.com/workforce-identity/)
 
 ## Prerequisites
 
-- A Clerk application with the [Enhanced authentication add-on](https://clerk.com/pricing) plan.
-{/* TODO: This would be a good place for a Nutshell (Ask Rachel). "To do so..." could go in the nutshell. */}
-- An `email_address` enabled as a strategy. In the Clerk Dashboard, go to **User & Authentication > [Email, Phone, Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username)**. In the **Contact information** section, enable the **Email address** strategy by toggling on the switch.
+- A Clerk application that includes the [Enhanced authentication add-on](https://clerk.com/pricing), available with the Pro plan.
+- **Email address** enabled as an identifier for your application. See the [Identifiers](/docs/authentication/configuration/sign-up-sign-in-options#identifiers) section to learn more about how to enable it.
 
-<Images 
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/email-address-configuration.jpg"
-  alt="The Email, Phone, Username page in the Clerk Dashboard. There is a red arrow pointing to the toggle next to 'Email address', and it is toggled on."
-/>
+<Steps>
 
-## Create a SAML connection
+### Create a SAML connection
 
-To create a SAML Connection, in the Clerk Dashboard, go to **User & Authentication > [Enterprise Connections](https://dashboard.clerk.com/last-active?path=user-authentication/enterprise-connections)**.
+To create a SAML connection in Clerk,
 
-Click on the **Create connection** button.
-
-<Images
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/enterprise-connections.webp"
-  alt="The Enterprise Connections section in the Clerk Dashboard. There is a red arrow pointing to the 'Create connection' button."
-/>
-
-Once you have clicked on the **Create connection** button, you will be presented with a modal to create a new connection. Fill in the required fields.
-
+1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com).
+2. In the navigation sidebar, select **User & Authentication > [Enterprise Connections](https://dashboard.clerk.com/last-active?path=user-authentication/enterprise-connections)**.
+3. Select the **Create connection** button.
+4. You will be presented with a modal to create a new connection. Fill in the required fields.
 - **Name** - A unique name for the connection. This is so you can tell your connections apart.
 - **Domain** - This is the email domain for which you will enable Enterprise SSO.
-
-<Images
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/create-connection.webp"
-  alt="The Enterprise Connections section in the Clerk Dashboard. The 'Create connection' modal is open."
-/>
-
-Once you have filled in these fields, you will be directed to the configuration settings page for the connection you just created.
+5. Once you have filled in these fields, you will be directed to the **Connection** page which has the configuration settings for the connection you just created. **Do not** select the **Enable connection** toggle just yet. You need to fully configure your IdP first before exposing your connection to your users while you're in the, sometimes long, process of configuring and testing it.
 
 <Images
   width={3024}
@@ -54,10 +37,13 @@ Once you have filled in these fields, you will be directed to the configuration 
   alt="The configuration settings for the Enterprise connection that was created."
 />
 
-Scroll down to the **Service provider details** section. You will need to add these two fields to your IdP’s application:
+### Configure your service provider
 
-- **SP Entity ID** - This is a unique identifier for your SAML connection that your IdP application needs.
-- **ACS URL** - This is your application’s URL that your IdP will redirect your users back to after they have authenticated in your IdP.
+Scroll down to the **Service Provider configuration** section. You will need to add these three fields to your IdP's application:
+
+- **Single sign-on URL** - This is a unique identifier for your SAML connection that your IdP application needs.
+- **Audience URI (SP Entity ID)** - This is your application's URL that your IdP will redirect your users back to after they have authenticated in your IdP.
+- **Metadata URL** - This is the URL to your SAML connection's metadata file. This is the recommended way to configure your SP.
 
 <Callout type="info">
   Different providers use different terminology so consult our [glossary table](#glossary) to locate the right term for your case.
@@ -70,26 +56,34 @@ Scroll down to the **Service provider details** section. You will need to add th
   alt="The configuration settings for the Enterprise connection that was created. The page is scrolled down to show the 'Service provider details' section."
 />
 
-Scroll down to the **Identity provider configuration** section. Here, you will see:
+### Configure your identity provider
 
-- **IdP Entity ID** - This is the unique identifier of your IdP application.
-- **IdP SSO URL** - This is your IdP’s URL that we’ll redirect your users to so that they authenticate.
+Scroll down to the **Identity Provider configuration** section. There are two options for configuring your IdP:
+
+- **Custom configuration** - This is where you can manually input the configuration settings for your IdP.
+- **Metadata configuration** - This is where you can input the URL to your IdP's metadata file. **This is the recommended way to configure your IdP.**
+
+#### Custom configuration
+
+If you choose to manually input the configuration settings for your IdP, you will need to add these three fields:
+
+- **Sign on URL** - This is the unique identifier of your IdP application.
+- **Issuer** - This is your IdP's URL that we'll redirect your users to so that they authenticate.
 - **Certificate** - This is the certificate needed for Clerk to securely connect to your IdP.
 
 <Callout type="info">
   Different providers use different terminology so consult our [glossary table](#glossary) to locate the right term for your case.
 </Callout>
 
-<Images
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/enterprise-connection-settings-3.webp"
-  alt="The configuration settings for the Enterprise connection that was created. The page is scrolled down to show the 'Identity provider configuration' section."
-/>
+### Map your IdP's claims to Clerk fields
 
-## Map your IdP’s claims to Clerk fields
+{/* TODO: How does the attribute mapping settings in the dashboard work? */}
 
-The last step is to map your IdP claims to Clerk’s `email`, `firstName`, `lastName` fields. The first is required for the integration to work and the last two are required for getting the user’s name.
+Scroll down to the **Attribute mapping** section.
+
+Map your IdP claims to Clerk's `id`, `email`, `firstName`, `lastName` fields. The first two are required for the integration to work and the last two are required for getting the user's name.
+
+{/* TODO: Add field for `id` to table below, and ensure this table is up to date and accurate */}
 
 | Clerk Field | Azure AD Claim Names | Google Claim Names | Okta Claim Names |
 | --- | --- | --- | --- |
@@ -97,64 +91,74 @@ The last step is to map your IdP claims to Clerk’s `email`, `firstName`, `last
 | `firstName` | `user.givenname` | Basic Information > First name | `user.firstName` |
 | `lastName` | `user.surname` | Basic Information > Last name | `user.lastName` |
 
-## Map every other claim
+### Map every other claim (optional)
 
-If you wish to map other claims from your IdP, you can do so by mapping them to your users' public metadata. You do this by prepending the Clerk claims with `public_metadata_`.
+{/* TODO: Should there be an example of how to do this? The mapping to public metadata? */}
+
+To map other claims from your IdP, map them to your users' public metadata by prepending the Clerk claims with `public_metadata_`.
 
 For example, the claim `public_metadata_country` with the value `Canada` will be saved in the user's `public_metadata` under the key `country` with the value `Canada`.
 
-Learn more about how to access the [metadata](/docs/users/metadata) from our APIs.
+[Learn more about how to access the metadata from our APIs](/docs/users/metadata).
 
-## Activate your SAML Connection
+### Activate your SAML connection
 
-Now that everything is set up, you need to activate the SAML Connection via the Clerk Dashboard. This is so you don't expose your connection to your users while you're in the, sometimes long, process of configuring and testing it.
+Now that you have configured your SAML connection, scroll to the top of the **Connection** page and toggle on the **Enable connection** option. This will make the connection available for your users to authenticate with.
 
-## Authenticate with SAML
+### Authenticate with SAML
 
-Everything should be set up now for you to try out authentication via SAML. Go to your application’s Sign In page and add your email in the input field. If it matches an active SAML Connection, you will be redirected to your IdP where you will sign in with your credentials.
+Everything should be set up now for you to try out authentication via SAML. Go to your application's sign-in page and add your email in the input field. If it matches an active SAML connection, you will be redirected to your IdP where you will sign in with your credentials.
 
-## Sync user attributes during Sign in
-During SAML SSO and after a user has successfully authenticated, the IdP provides Clerk with the corresponding user data. After each successful Sign in, we are making sure to keep the user data up to date
-based on the response of the SAML provider. You can disable this behavior by visiting the SAML Connection `Advanced` tab in your [Clerk Dashboard](https://dashboard.clerk.com/) and disabling the `Sync user attributes during sign-in` option.
+### Sync user attributes during sign in (optional)
 
-This setting is enabled by default.
+During SAML SSO and after a user has successfully authenticated, the IdP provides Clerk with the corresponding user data. After each successful sign in, Clerk handles keeping the user data up-to-date based on the response of the SAML provider. This means that if a user's data changes on the IdP side, Clerk will automatically update the user's data in the Clerk database.
 
-## Allow subdomains
-Authenticating via SAML SSO requires the user's email address domain to match the exact domain the SAML Connection has been configured with.
+To disable this behavior,
+1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com).
+2. In the navigation sidebar, select **User & Authentication > [Enterprise Connections](https://dashboard.clerk.com/last-active?path=user-authentication/enterprise-connections)**.
+3. Select the SAML connection you want to disable the sync for.
+4. Select the **Advanced** tab.
+5. Toggle off the **Sync user attributes during Sign in** option.
 
-To support SAML SSO with subdomains, you must enable the **Allow subdomains** option in the [Clerk Dashboard](https://dashboard.clerk.com/). You can find this setting in the SAML Connection **Advanced**.
+## Allow subdomains (optional)
 
-For example, a user with the email address `john@sales.example.com`
-will be able to use a SAML Connection with the `example.com` domain in order to authenticate.
+Authenticating via SAML SSO requires the user's email address domain to match the exact domain the SAML connection has been configured with. By default, subdomains are not supported. For example, a user with the email address `john@sales.example.com` would not be able to use a SAML connection with the `example.com` domain in order to authenticate.
 
-This setting is disabled by default.
+To support SAML SSO with subdomains,
+1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com).
+2. In the navigation sidebar, select **User & Authentication > [Enterprise Connections](https://dashboard.clerk.com/last-active?path=user-authentication/enterprise-connections)**.
+3. Select the SAML connection you want to disable the sync for.
+4. Select the **Advanced** tab.
+5. Toggle on the **Allow subdomains** option.
 
 <Callout type="info">
-  To enable the Allow subdomains option, your SAML Connection domain must be an eTLD+1.
+  To enable the **Allow subdomains** option, your SAML connection domain must be an eTLD+1.
 </Callout>
+
+</Steps>
 
 ## Glossary
 
 | Term | Explanation | Azure AD Terminology | Google Terminology | Okta Terminology |
 | --- | --- | --- | --- | --- |
-| `idp_entity_id` | This is the unique identifier of your IdP’s application. | Azure AD Identifier | Entity ID | Identity Provider Issuer |
-| `idp_sso_url` | This is your IdP’s URL that we’ll redirect your users to so that they authenticate. | Login URL | SSO URL | Identity Provider Single Sign-On URL |
+| `idp_entity_id` | This is the unique identifier of your IdP's application. | Azure AD Identifier | Entity ID | Identity Provider Issuer |
+| `idp_sso_url` | This is your IdP's URL that we'll redirect your users to so that they authenticate. | Login URL | SSO URL | Identity Provider Single Sign-On URL |
 | `idp_certificate` | This is the certificate needed for Clerk to securely connect to your IdP. | Certificate (Base64) | Certificate | x.509 Certificate |
 | `sp_entity_id` | This is a unique identifier for your SAML connection that your IdP application needs. | Identifier (Entity ID) | Entity ID (Under “Service Provider Details”) | Audience URI (SP Entity ID) |
-| `acs_url` | This is your application’s URL that your IdP will redirect your users back to after they have authenticated in your IdP. | Reply URL (Assertion Consumer Service URL) | ACS URL | Single sign-on URL |
+| `acs_url` | This is your application's URL that your IdP will redirect your users back to after they have authenticated in your IdP. | Reply URL (Assertion Consumer Service URL) | ACS URL | Single sign-on URL |
 | SAML | This is the protocol that we are using to connect to your Identity Provider. Other protocols are OIDC, OAuth 2.0. | | | |
-| SAML Connection | This is the connection that you create in Clerk to hold the integration configuration. | | | |		
-| Identity Provider | This is the service you are using to store your users’ identity. Azure AD and Okta are two popular providers. | | | |	
-| IdP | Abbreviation for “Identity Provider” | | | |		
-| IdP Application | This is an application from the IdP that connects to | | | |		
-| Service Provider | This is the service that requests and receives the identity from the IdP. | | | |	
-| SP | Abbreviation for “Service Provider”. | | | |	
+| SAML Connection | This is the connection that you create in Clerk to hold the integration configuration. | | | |
+| Identity Provider | This is the service you are using to store your users' identity. Azure AD and Okta are two popular providers. | | | |
+| IdP | Abbreviation for “Identity Provider” | | | |
+| IdP Application | This is an application from the IdP that connects to | | | |
+| Service Provider | This is the service that requests and receives the identity from the IdP. | | | |
+| SP | Abbreviation for “Service Provider”. | | | |
 
 ## Frequently asked questions (FAQ)
 
-**I’ve enabled other strategies but they don’t work.**
+**I've enabled other strategies but they don't work.**
 
-A Clerk application can have multiple authentication strategies, but a domain that enables Enterprise SSO can not. Once Enterprise SSO is enabled for a domain, there can be no other authentication methods for that specific domain. This is in line with an organization’s intent to manage their users’ identity from one place. This will allow your Clerk application to enable Enterprise SSO connections for certain domains while others use non-Enterprise SSO methods depending on each organization's needs.
+A Clerk application can have multiple authentication strategies, but a domain that enables Enterprise SSO can not. Once Enterprise SSO is enabled for a domain, there can be no other authentication methods for that specific domain. This is in line with an organization's intent to manage their users' identity from one place. This will allow your Clerk application to enable Enterprise SSO connections for certain domains while others use non-Enterprise SSO methods depending on each organization's needs.
 
 **Will SAML work for my existing users?**
 
@@ -162,7 +166,7 @@ Yes, SAML will work for your existing users as well! That means, that if you ena
 
 **What happens if I have multi-factor enabled at Clerk?**
 
-This will work: Once the user comes back from the IdP, they will need to go through the extra factors of authentication. This is in case you need to add extra factors on top of what your IdP supports (or in case they don’t). You can choose to not enable this feature if you wish.
+This will work: Once the user comes back from the IdP, they will need to go through the extra factors of authentication. This is in case you need to add extra factors on top of what your IdP supports (or in case they don't). You can choose to not enable this feature if you wish.
 
 **What happens if I delete the SAML connection? Will my users be deleted?**
 
@@ -174,7 +178,7 @@ No, Clerk only supports SP-initiated flows at this time.
 
 **How much does it cost now?**
 
-It’s going to be free during the Beta period.
+It's going to be free during the Beta period.
 
 **How much will it cost after Beta?**
 
