--- a/docs/references/backend/invitations/get-invitation-list.mdx
+++ b/docs/references/backend/invitations/get-invitation-list.mdx
@@ -15,7 +15,7 @@ const invitations = await clerkClient.invitations.getInvitationList();
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `status?` | `accepted /| pending /| revoked` | Filter by invitation status. |
+| `status?` | `accepted \| pending \| revoked` | Filter by invitation status. |
 
 ## Example
 
