move quickstart repos

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -5,9 +5,7 @@ description: Add authentication and user management to your Next.js app with Cle
 
 # Next.js Quickstart
 
-Protect your Next.js application with Clerk auth in ten minutes. This guide will show you how to install Clerk, add middleware to protect specific routes, and embed the `<UserButton />` component for account management.
-
-
+Protect your Next.js application with Clerk auth in less than ten minutes. This guide will show you how to install Clerk, add middleware to protect specific routes, and embed the `<UserButton />` component for account management.
 
 <Steps>
 
@@ -210,6 +208,10 @@ Then, visit your app's homepage at [`localhost:3000`](http://localhost:3000) to 
     <Cards title="Deploy to Production" description="Learn how to deploy your Clerk app to production." link="/docs/deployments/overview" cta="Learn More" />
 
     <Cards title="Deploy to Vercel" description="Learn how to deploy your Clerk app to production on Vercel." link="/docs/deployments/deploy-to-vercel" cta="Learn More" />
+
+    <Cards title="Clerk + Next.js App Router Quickstart Repo" description="The official companion repo for Clerk's Next.js Quickstart using App Router." link="https://github.com/clerk/clerk-nextjs-app-quickstart" cta="Learn More" />
+
+    <Cards title="Clerk + Next.js Pages Router Quickstart Repo" description="The official companion repo for Clerk's Next.js Quickstart using Pages Router." link="https://github.com/clerk/clerk-nextjs-pages-quickstart" cta="Learn More" />
 
   </div>
 </div>
