--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -5,32 +5,7 @@ description: Add authentication and user management to your Next.js app with Cle
 
 # Next.js Quickstart
 
-<TutorialHero
-  framework="nextjs"
-  beforeYouStart={[
-    {
-      title: "Set up a Clerk application",
-      link: "https://clerk.com/docs/quickstarts/setup-clerk",
-    },
-    {
-      title: "Create a Next.js application",
-      link: "https://nextjs.org/docs/getting-started/installation",
-    },
-  ]}
->
-
-- Install `@clerk/nextjs`
-- Set up your environment variables
-- Wrap your Next.js app in `<ClerkProvider />`
-- Limit access to authenticated users
-- Specify which routes are publicly accessible
-- Enable users to manage their session with `<UserButton />`
-
-</TutorialHero>
-
-<Callout type='info' emoji='💡'>
-  The next major version of the Clerk Next.js SDK is coming soon! If you're just starting a project, consider [trying out the Core 2 beta](https://beta.clerk.com/docs/quickstarts/nextjs) instead.
-</Callout>
+Protect your Next.js application with Clerk auth in less than ten minutes. This guide will show you how to install Clerk, add middleware to protect specific routes, and embed the `<UserButton />` component for account management.
 
 <Steps>
 
@@ -233,6 +208,10 @@ Then, visit your app's homepage at [`localhost:3000`](http://localhost:3000) to 
     <Cards title="Deploy to Production" description="Learn how to deploy your Clerk app to production." link="/docs/deployments/overview" cta="Learn More" />
 
     <Cards title="Deploy to Vercel" description="Learn how to deploy your Clerk app to production on Vercel." link="/docs/deployments/deploy-to-vercel" cta="Learn More" />
+
+    <Cards title="Clerk + Next.js App Router Quickstart Repo" description="The official companion repo for Clerk's Next.js Quickstart using App Router." link="https://github.com/clerk/clerk-nextjs-app-quickstart" cta="Learn More" />
+
+    <Cards title="Clerk + Next.js Pages Router Quickstart Repo" description="The official companion repo for Clerk's Next.js Quickstart using Pages Router." link="https://github.com/clerk/clerk-nextjs-pages-quickstart" cta="Learn More" />
 
   </div>
 </div>
