--- a/docs/references/javascript/sign-in/sign-in.mdx
+++ b/docs/references/javascript/sign-in/sign-in.mdx
@@ -21,12 +21,11 @@ The `SignIn` object's properties can be split into logical groups, with each gro
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `status` | `string` | The current status of the sign-in.<br/>The following values are supported:<br/><ul><li>`needs_identifier`: The authentication identifier hasn't been provided.</li><li>`needs_first_factor`: First factor verification for the provided identifier needs to be prepared and verified. See [First Factor](/docs/references/javascript/sign-in/first-factor) for details.</li><li>`needs_second_factor`: Second factor verification (2FA) for the provided identifier needs to be prepared and verified. See [Second Factor](/docs/references/javascript/sign-in/second-factor) for details.</li><li>`needs_new_password`: The user needs to set a new password.</li><li>`complete`: The sign-in is complete and the user is authenticated.</li></ul> |
-| `supportedIdentifiers` | `string[]` | Array of all the authentication identifiers that are supported for this sign in.<br/>Examples of this could be: <ul><li>`email_address`</li><li>`phone_number`</li><li>`web3_wallet`</li><li>`username`</li></ul> |
+| `status` | `SignInStatus` | The current status of the sign-in.<br/>`SignInStatus` supports the following values:<br/><ul><li>`needs_identifier`: The authentication identifier hasn't been provided.</li><li>`needs_first_factor`: First factor verification for the provided identifier needs to be prepared and verified. See [First Factor](/docs/references/javascript/sign-in/first-factor) for details.</li><li>`needs_second_factor`: Second factor verification (2FA) for the provided identifier needs to be prepared and verified. See [Second Factor](/docs/references/javascript/sign-in/second-factor) for details.</li><li>`needs_new_password`: The user needs to set a new password.</li><li>`complete`: The sign-in is complete and the user is authenticated.</li></ul> |
+| `supportedIdentifiers` | `SignInIdentifier[]` | Array of all the authentication identifiers that are supported for this sign in.<br/>`SignInIdentifier` supports the following values:<br /><ul><li>`email_address`</li><li>`phone_number`</li><li>`web3_wallet`</li><li>`username`</li></ul> |
 | `identifier` | `string \| null` | The authentication identifier value for the current sign-in. |
-| `supportedExternalAccounts` | `string[]` | Array of all the external accounts that can be used in this sign in.<br />For example:<br /><code>["oauth_google", "oauth_facebook"]</code> |
-| `supportedFirstFactors` | `SignInFactor[]` | Array of the first factors that are supported in the current sign-in. Each factor contains information about the verification strategy that can be used.<br/>For example: <ul><li>`email_code` for email addresses</li><li>`phone_code` for phone numbers</li></ul> As well as the identifier that the factor refers to. |
-| `supportedSecondFactors` | `SignInFactor[]` | Array of the second factors that are supported in the current sign-in. Each factor contains information about the verification strategy that can be used.<br/>For example: <ul><li>`email_code` for email addresses</li><li>`phone_code` for phone numbers</li></ul> As well as the identifier that the factor refers to. Please note that this property is populated only when the first factor is verified. |
+| `supportedFirstFactors` | `SignInFirstFactor[]` | Array of the first factors that are supported in the current sign-in. Each factor contains information about the verification strategy that can be used. |
+| `supportedSecondFactors` | `SignInSecondFactor[]` | Array of the second factors that are supported in the current sign-in. Each factor contains information about the verification strategy that can be used.<br/>For example: <ul><li>`email_code` for email addresses</li><li>`phone_code` for phone numbers</li></ul> As well as the identifier that the factor refers to. Please note that this property is populated only when the first factor is verified. |
 | `firstFactorVerification` | `Verification` | The state of the verification process for the selected first factor. Please note that this property contains an empty verification object initially, since there is no first factor selected. You need to call the [`prepareFirstFactor`](/docs/references/javascript/sign-in/first-factor#prepare-first-factor) method in order to start the verification process. |
 | `secondFactorVerification` | `Verification` | The state of the verification process for the selected second factor. Similar to `firstFactorVerification`, this property contains an empty verification object initially, since there is no second factor selected. For the `phone_code` strategy, you need to call the [`prepareSecondFactor`](/docs/references/javascript/sign-in/second-factor#prepare-second-factor) method in order to start the verification process. For the `totp` strategy, you can directly attempt. |
 | `userData` | `UserData` | An object containing information about the user of the current sign-in. This property is populated only once an identifier is given to the `SignIn` object. |
