add signinfirstfactor and signinsecondfactor to JS type references

--- a/docs/references/javascript/types/sign-in-first-factor.mdx
+++ b/docs/references/javascript/types/sign-in-first-factor.mdx
@@ -13,7 +13,7 @@ type SignInFirstFactor = EmailCodeFactor | EmailLinkFactor | PhoneCodeFactor | P
 
 | Property | Type | Description |
 | --- | --- | --- |
-| `strategy` | `"string"` | The strategy of the factor.<br />Supports the following values:<ul><li>`"email_code"`</li><li>`"email_link"`</li><li>`"phone_code"`</li><li>`"password"`</li><li>`"reset_password_phone_code"`</li><li>`"reset_password_email_code"`</li><li>`"web3_metamask_signature"`</li><li>[`OAuthStrategy`](/docs/references/javascript/types/oauth)</li><li>`"saml"`</li></ul> |
+| `strategy` | `string` | The strategy of the factor.<br />Supports the following values:<ul><li>`"email_code"`</li><li>`"email_link"`</li><li>`"phone_code"`</li><li>`"password"`</li><li>`"reset_password_phone_code"`</li><li>`"reset_password_email_code"`</li><li>`"web3_metamask_signature"`</li><li>[`OAuthStrategy`](/docs/references/javascript/types/oauth)</li><li>`"saml"`</li></ul> |
 | `emailAddressId` | `string` | The ID of the email address that a code or link will be sent to. Populated when the `strategy` is `"email_code"`, `"email_link"`, or `"reset_password_email_code"`. |
 | `phoneNumberId` | `string` | The ID of the phone number that a code will be sent to. Populated when the `strategy` is `"phone_code"` or `"reset_password_phone_code"`. |
 | `web3WalletId` | `string` | The ID of the Web3 wallet that will be used to sign a message. Populated when the `strategy` is `"web3_metamask_signature"`. |
@@ -23,7 +23,7 @@ type SignInFirstFactor = EmailCodeFactor | EmailLinkFactor | PhoneCodeFactor | P
 ## `EmailCodeFactor`
 
 ```ts
-export type EmailCodeFactor = {
+type EmailCodeFactor = {
   strategy: EmailCodeStrategy;
   emailAddressId: string;
   safeIdentifier: string;
@@ -35,7 +35,7 @@ export type EmailCodeFactor = {
 
 ```ts
 
-export type EmailLinkFactor = {
+type EmailLinkFactor = {
   strategy: EmailLinkStrategy;
   emailAddressId: string;
   safeIdentifier: string;
@@ -46,7 +46,7 @@ export type EmailLinkFactor = {
 ## `PhoneCodeFactor`
 
 ```ts
-export type PhoneCodeFactor = {
+type PhoneCodeFactor = {
   strategy: PhoneCodeStrategy;
   phoneNumberId: string;
   safeIdentifier: string;
@@ -58,7 +58,7 @@ export type PhoneCodeFactor = {
 ## `PasswordFactor`
 
 ```ts
-export type PasswordFactor = {
+type PasswordFactor = {
   strategy: PasswordStrategy;
 };
 ```
@@ -67,7 +67,7 @@ export type PasswordFactor = {
 ## `ResetPasswordPhoneCodeFactor`
 
 ```ts
-export type ResetPasswordPhoneCodeFactor = {
+type ResetPasswordPhoneCodeFactor = {
   strategy: ResetPasswordPhoneCodeStrategy;
   phoneNumberId: string;
   safeIdentifier: string;
@@ -78,7 +78,7 @@ export type ResetPasswordPhoneCodeFactor = {
 ## `ResetPasswordEmailCodeFactor`
 
 ```ts
-export type ResetPasswordEmailCodeFactor = {
+type ResetPasswordEmailCodeFactor = {
   strategy: ResetPasswordEmailCodeStrategy;
   emailAddressId: string;
   safeIdentifier: string;
@@ -89,7 +89,7 @@ export type ResetPasswordEmailCodeFactor = {
 ## `Web3SignatureFactor`
 
 ```ts
-export type Web3SignatureFactor = {
+type Web3SignatureFactor = {
   strategy: Web3Strategy;
   web3WalletId: string;
   primary?: boolean;
@@ -99,7 +99,7 @@ export type Web3SignatureFactor = {
 ## `OauthFactor`
 
 ```ts
-export type OauthFactor = {
+type OauthFactor = {
   strategy: OAuthStrategy;
 };
 ```
@@ -107,7 +107,7 @@ export type OauthFactor = {
 ## `SamlFactor`
 
 ```ts
-export type SamlFactor = {
+type SamlFactor = {
   strategy: SamlStrategy;
 };
 ```
