fix broken tabs component

--- a/docs/advanced-usage/using-proxies.mdx
+++ b/docs/advanced-usage/using-proxies.mdx
@@ -174,7 +174,7 @@ To configure your proxy setup using environment variables, your `.env.local` fil
 
 #### Properties in your application
 
-<Tabs type="framework" options={["Next.js", "Remix", "JavaScript"]}>
+<Tabs type="framework" items={["Next.js", "Remix", "JavaScript"]}>
   <Tab>
     To configure your proxy setup using properties in your Next.js application, set the `proxyUrl` property on the [`<ClerkProvider>`](https://clerk.com/docs/components/clerk-provider) component.
 
