apply code review suggestions

--- a/docs/references/javascript/types/sign-in-first-factor.mdx
+++ b/docs/references/javascript/types/sign-in-first-factor.mdx
@@ -8,7 +8,16 @@ description: The SignInFirstFactor type represents the first factor verification
 The `SignInFirstFactor` type represents the first factor verification strategy that can be used in the sign-in process.
 
 ```ts
-type SignInFirstFactor = EmailCodeFactor | EmailLinkFactor | PhoneCodeFactor | PasswordFactor | ResetPasswordPhoneCodeFactor | ResetPasswordEmailCodeFactor | Web3SignatureFactor | OauthFactor | SamlFactor;
+type SignInFirstFactor =
+  | EmailCodeFactor
+  | EmailLinkFactor
+  | PhoneCodeFactor
+  | PasswordFactor
+  | ResetPasswordPhoneCodeFactor
+  | ResetPasswordEmailCodeFactor
+  | Web3SignatureFactor
+  | OauthFactor
+  | SamlFactor;
 ```
 
 | Property | Type | Description |
