--- a/docs/references/javascript/types/sign-in-second-factor.mdx
+++ b/docs/references/javascript/types/sign-in-second-factor.mdx
@@ -8,7 +8,10 @@ description: The SignInSecondFactor type represents the second factor verificati
 The `SignInSecondFactor` type represents the second factor verification strategy that can be used in the sign-in process.
 
 ```ts
-type SignInSecondFactor = PhoneCodeFactor | TOTPFactor | BackupCodeFactor;
+type SignInSecondFactor =
+  | PhoneCodeFactor
+  | TOTPFactor
+  | BackupCodeFactor;
 ```
 
 | Property | Type | Description |
