--- a/docs/references/javascript/sign-in/sign-in.mdx
+++ b/docs/references/javascript/sign-in/sign-in.mdx
@@ -21,11 +21,11 @@ The `SignIn` object's properties can be split into logical groups, with each gro
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `status` | `SignInStatus` | The current status of the sign-in.<br/>`SignInStatus` supports the following values:<br/><ul><li>`needs_identifier`: The authentication identifier hasn't been provided.</li><li>`needs_first_factor`: First factor verification for the provided identifier needs to be prepared and verified. See [First Factor](/docs/references/javascript/sign-in/first-factor) for details.</li><li>`needs_second_factor`: Second factor verification (2FA) for the provided identifier needs to be prepared and verified. See [Second Factor](/docs/references/javascript/sign-in/second-factor) for details.</li><li>`needs_new_password`: The user needs to set a new password.</li><li>`complete`: The sign-in is complete and the user is authenticated.</li></ul> |
-| `supportedIdentifiers` | `SignInIdentifier[]` | Array of all the authentication identifiers that are supported for this sign in.<br/>`SignInIdentifier` supports the following values:<br /><ul><li>`email_address`</li><li>`phone_number`</li><li>`web3_wallet`</li><li>`username`</li></ul> |
+| `status` | `SignInStatus` | The current status of the sign-in.<br/><br/>`SignInStatus` supports the following values:<br/><ul><li>`needs_identifier`: The authentication identifier hasn't been provided.</li><li>`needs_first_factor`: First factor verification for the provided identifier needs to be prepared and verified. See [First Factor](/docs/references/javascript/sign-in/first-factor) for details.</li><li>`needs_second_factor`: Second factor verification (2FA) for the provided identifier needs to be prepared and verified. See [Second Factor](/docs/references/javascript/sign-in/second-factor) for details.</li><li>`needs_new_password`: The user needs to set a new password.</li><li>`complete`: The sign-in is complete and the user is authenticated.</li></ul> |
+| `supportedIdentifiers` | `SignInIdentifier[]` | Array of all the authentication identifiers that are supported for this sign in.<br/><br/>`SignInIdentifier` supports the following values:<br /><ul><li>`email_address`</li><li>`phone_number`</li><li>`web3_wallet`</li><li>`username`</li></ul> |
 | `identifier` | `string \| null` | The authentication identifier value for the current sign-in. |
-| `supportedFirstFactors` | `SignInFirstFactor[]` | Array of the first factors that are supported in the current sign-in. Each factor contains information about the verification strategy that can be used. See the [`SignInFirstFactor`](/docs/references/javascript/types/sign-in-first-factor) type reference for more information. |
-| `supportedSecondFactors` | `SignInSecondFactor[]` | Array of the second factors that are supported in the current sign-in. Each factor contains information about the verification strategy that can be used. This property is populated only when the first factor is verified. See the [`SignInSecondFactor`](/docs/references/javascript/types/sign-in-second-factor) type reference for more information. |
+| `supportedFirstFactors` | <code>[SignInFirstFactor](/docs/references/javascript/types/sign-in-first-factor)[]</code> | Array of the first factors that are supported in the current sign-in. Each factor contains information about the verification strategy that can be used. See the [`SignInFirstFactor`](/docs/references/javascript/types/sign-in-first-factor) type reference for more information. |
+| `supportedSecondFactors` | <code>[SignInSecondFactor](/docs/references/javascript/types/sign-in-second-factor)[]</code> | Array of the second factors that are supported in the current sign-in. Each factor contains information about the verification strategy that can be used. This property is populated only when the first factor is verified. See the [`SignInSecondFactor`](/docs/references/javascript/types/sign-in-second-factor) type reference for more information. |
 | `firstFactorVerification` | `Verification` | The state of the verification process for the selected first factor. Initially, this property contains an empty verification object, since there is no first factor selected. You need to call the [`prepareFirstFactor`](/docs/references/javascript/sign-in/first-factor#prepare-first-factor) method in order to start the verification process. |
 | `secondFactorVerification` | `Verification` | The state of the verification process for the selected second factor. Initially, this property contains an empty verification object, since there is no second factor selected. For the `phone_code` strategy, you need to call the [`prepareSecondFactor`](/docs/references/javascript/sign-in/second-factor#prepare-second-factor) method in order to start the verification process. For the `totp` strategy, you can directly attempt. |
 | `userData` | `UserData` | An object containing information about the user of the current sign-in. This property is populated only once an identifier is given to the `SignIn` object. |
