apply code review suggestions

--- a/docs/advanced-usage/using-proxies.mdx
+++ b/docs/advanced-usage/using-proxies.mdx
@@ -149,27 +149,36 @@ You can configure your proxy setup by either:
 To configure your proxy setup using environment variables, your `.env.local` file should look like this:
 
 <InjectKeys>
-  <CodeBlockTabs type="framework" options={["Next.js", "Remix", 'Gatsby']}>
+  <Tabs type="framework" items={["Next.js", "Remix", "JavaScript"]}>
+    <Tab>
     ```env filename=".env.local"
     NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY={{pub_key}}
     CLERK_SECRET_KEY={{secret}}
 
     NEXT_PUBLIC_CLERK_PROXY_URL=https://app.dev/__clerk
     ```
+    </Tab>
+
+    <Tab>
     ```env filename=".env.local"
     CLERK_PUBLISHABLE_KEY={{pub_key}}
     CLERK_SECRET_KEY={{secret}}
 
     CLERK_PROXY_URL=https://app.dev/__clerk
     ```
+    </Tab>
 
-    ```env filename=".env.development"
+    <Tab>
+    You will only need to set environment variables in your JavaScript application if you are using a bundler (the `NPM module` method for ClerkJS installation). If you are using the `<script>` method, configure your proxy setup using [properties in your application](#properties-in-your-application) instead.
+
+    ```env filename=".env.local"
     CLERK_PUBLISHABLE_KEY={{pub_key}}
     CLERK_SECRET_KEY={{secret}}
 
     CLERK_PROXY_URL=https://app.dev/__clerk
     ```
-  </CodeBlockTabs>
+    </Tab>
+  </Tabs>
 </InjectKeys>
 
 #### Properties in your application
@@ -178,26 +187,43 @@ To configure your proxy setup using environment variables, your `.env.local` fil
   <Tab>
     To configure your proxy setup using properties in your Next.js application, set the `proxyUrl` property on the [`<ClerkProvider>`](https://clerk.com/docs/components/clerk-provider) component.
 
-    ```tsx filename="_app.tsx"
-      import { ClerkProvider } from "@clerk/nextjs";
-      import Head from "next/head";
+    <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
+    ```tsx filename="app/layout.tsx" {9}
+    import { ClerkProvider } from '@clerk/nextjs';
 
-      export default function App({ Component, pageProps }) {
-        return (
-          <ClerkProvider proxyUrl='https://app.dev/__clerk' {...pageProps}>
-            <Head>
-              <title>Proxy Next.js app</title>
-              <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-            </Head>
-            <Component {...pageProps} />
-          </ClerkProvider>
-        );
-      }
+    export default function RootLayout({
+      children,
+    }: {
+      children: React.ReactNode
+    }) {
+      return (
+        <ClerkProvider proxyUrl='https://app.dev/__clerk'>
+          <html lang="en">
+            <body>{children}</body>
+          </html>
+        </ClerkProvider>
+      )
+    }
     ```
+
+    ```tsx filename="_app.tsx" {6}
+    import { ClerkProvider } from "@clerk/nextjs";
+    import type { AppProps } from "next/app";
+
+    function MyApp({ Component, pageProps }: AppProps) {
+      return (
+        <ClerkProvider proxyUrl='https://app.dev/__clerk' {...pageProps}>
+          <Component {...pageProps} />
+        </ClerkProvider>
+      );
+    }
+    export default MyApp;
+    ```
+    </CodeBlockTabs>
   </Tab>
 
   <Tab>
-    To configure your proxy setup using properties in your Remix application, set the `proxyUrl` property on the [`ClerkApp`](https://clerk.com/docs/references/remix/clerk-app) wrapper.
+    To configure your proxy setup using properties in your Remix application, set the `proxyUrl` property on the [`ClerkApp`](/docs/references/remix/clerk-app) wrapper.
 
     ```tsx filename="root.tsx"
       export const loader = (args) => {
@@ -224,7 +250,7 @@ To configure your proxy setup using environment variables, your `.env.local` fil
   </Tab>
 
   <Tab>
-    To configure your proxy setup using properties in your JavaScript application, pass the `proxyUrl` option to the [`load()`](https://clerk.com/docs/references/javascript/clerk/clerk#load) method.
+    To configure your proxy setup using properties in your JavaScript application, pass the `proxyUrl` option to the [`load()`](/docs/references/javascript/clerk/clerk#load) method.
 
     <InjectKeys>
       <CodeBlockTabs type="npm-script" options={["NPM module", "<script>"]}>
