--- a/docs/custom-flows/user-impersonation.mdx
+++ b/docs/custom-flows/user-impersonation.mdx
@@ -100,7 +100,9 @@ The above JSON snippet shows what a Clerk session token looks like when a user i
 
 ### Detect impersonated sessions in the frontend
 
-When working with frontend (client-side) code, you can easily detect impersonated sessions and gain access to the actor ID or other information from the `act` claim.
+When working with client-side code, you can detect impersonated sessions and gain access to the actor ID or other information from the `act` claim.
+
+{/* TODO (DOCS-259): Add App Router example */}
 
 <Tabs type="framework" items={["Next.js", "React", "JavaScript"]}>
   <Tab>
