--- a/docs/components/authentication/sign-in.mdx
+++ b/docs/components/authentication/sign-in.mdx
@@ -149,9 +149,19 @@ function mountSignIn(node: HTMLDivElement, props?: SignInProps): void;
   clerk.mountSignIn(signInDiv);
   ```
 
-  ```html filename="index.html" {11}
+  ```html filename="index.html" {21}
   <!-- Add a <div id="sign-in"> element to your HTML -->
   <div id="sign-in"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk Publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key="{{pub_key}}"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
 
   <script>
     window.addEventListener("load", async function () {
@@ -208,9 +218,19 @@ function unmountSignIn(node: HTMLDivElement): void;
   clerk.unmountSignIn(signInDiv);
   ```
 
-  ```html filename="index.html" {15}
+  ```html filename="index.html" {25}
   <!-- Add a <div id="sign-in"> element to your HTML -->
   <div id="sign-in"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk Publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key="{{pub_key}}"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
 
   <script>
     window.addEventListener("load", async function () {
@@ -260,7 +280,17 @@ function openSignIn(props?: SignInProps): void;
   clerk.openSignIn();
   ```
 
-  ```html filename="index.html" {5}
+  ```html filename="index.html" {15}
+  <!-- Initialize Clerk with your
+  Clerk Publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key="{{pub_key}}"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
+
   <script>
     window.addEventListener("load", async function () {
       await Clerk.load();
@@ -300,7 +330,17 @@ function closeSignIn(): void;
   clerk.closeSignIn();
   ```
 
-  ```html filename="index.html" {9}
+  ```html filename="index.html" {19}
+  <!-- Initialize Clerk with your
+  Clerk Publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key="{{pub_key}}"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
+
   <script>
     window.addEventListener("load", async function () {
       await Clerk.load();
