--- a/docs/components/authentication/sign-up.mdx
+++ b/docs/components/authentication/sign-up.mdx
@@ -147,9 +147,19 @@ function mountSignUp(node: HTMLDivElement, props?: SignUpProps): void;
   clerk.mountSignUp(signUpDiv);
   ```
 
-  ```html filename="index.js" {11}
+  ```html filename="index.js" {21}
   <!-- Add a <div id="sign-up"> element to your HTML -->
   <div id="sign-up"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk Publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key="{{pub_key}}"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
 
   <script>
     window.addEventListener("load", async function () {
@@ -206,9 +216,19 @@ function unmountSignUp(node: HTMLDivElement): void;
   clerk.unmountSignUp(signUpDiv);
   ```
 
-  ```html filename="index.js" {15}
+  ```html filename="index.js" {25}
   <!-- Add a <div id="sign-up"> element to your HTML -->
   <div id="sign-up"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk Publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key="{{pub_key}}"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
 
   <script>
     window.addEventListener("load", async function () {
@@ -258,7 +278,17 @@ function openSignUp(props?: SignUpProps): void;
   clerk.openSignUp();
   ```
 
-  ```html filename="index.html" {5}
+  ```html filename="index.html" {15}
+  <!-- Initialize Clerk with your
+  Clerk Publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key="{{pub_key}}"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
+
   <script>
     window.addEventListener("load", async function () {
       await Clerk.load();
@@ -298,7 +328,17 @@ function closeSignUp(): void;
   clerk.closeSignUp();
   ```
 
-  ```html filename="index.html" {9}
+  ```html filename="index.html" {19}
+  <!-- Initialize Clerk with your
+  Clerk Publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key="{{pub_key}}"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
+
   <script>
     window.addEventListener("load", async function () {
       await Clerk.load();
