--- a/docs/components/organization/create-organization.mdx
+++ b/docs/components/organization/create-organization.mdx
@@ -121,9 +121,19 @@ function mountCreateOrganization(node: HTMLDivElement, props?: CreateOrganizatio
   clerk.mountCreateOrganization(createOrgDiv);
   ```
 
-  ```html filename="index.html" {11}
+  ```html filename="index.html" {21}
   <!-- Add a <div id="create-organization"> element to your HTML -->
   <div id="create-organization"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk Publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key="{{pub_key}}"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
 
   <script>
     window.addEventListener("load", async function () {
@@ -180,9 +190,19 @@ function unmountCreateOrganization(node: HTMLDivElement): void;
   clerk.unmountCreateOrganization(createOrgDiv);
   ```
 
-  ```html filename="index.html" {15}
+  ```html filename="index.html" {25}
   <!-- Add a <div id="create-organization"> element to your HTML -->
   <div id="create-organization"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk Publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key="{{pub_key}}"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
 
   <script>
     window.addEventListener("load", async function () {
@@ -239,9 +259,19 @@ function openCreateOrganization(props?: CreateOrganizationProps): void;
   clerk.openCreateOrganization(createOrgDiv);
   ```
 
-  ```html filename="index.html" {15}
+  ```html filename="index.html" {21}
   <!-- Add a <div id="create-organization"> element to your HTML -->
   <div id="create-organization"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk Publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key="{{pub_key}}"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
 
   <script>
     window.addEventListener("load", async function () {
@@ -292,9 +322,19 @@ function closeCreateOrganization(): void;
   clerk.closeCreateOrganization(createOrgDiv);
   ```
 
-  ```html filename="index.html" {15}
+  ```html filename="index.html" {25}
   <!-- Add a <div id="create-organization"> element to your HTML -->
   <div id="create-organization"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk Publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key="{{pub_key}}"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
 
   <script>
     window.addEventListener("load", async function () {
