--- a/docs/components/organization/organization-profile.mdx
+++ b/docs/components/organization/organization-profile.mdx
@@ -123,9 +123,19 @@ function mountOrganizationProfile(node: HTMLDivElement, props?: OrganizationProf
   clerk.mountOrganizationProfile(orgProfileDiv);
   ```
 
-  ```html filename="index.html" {11}
+  ```html filename="index.html" {21}
   <!-- Add a <div id="organization-profile"> element to your HTML -->
   <div id="organization-profile"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk Publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key="{{pub_key}}"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
 
   <script>
     window.addEventListener("load", async function () {
@@ -182,9 +192,19 @@ function unmountOrganizationProfile(node: HTMLDivElement): void;
   clerk.unmountOrganizationProfile(orgProfileDiv);
   ```
 
-  ```html filename="index.html" {15}
+  ```html filename="index.html" {25}
   <!-- Add a <div id="organization-profile"> element to your HTML -->
   <div id="organization-profile"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk Publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key="{{pub_key}}"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
 
   <script>
     window.addEventListener("load", async function () {
@@ -241,9 +261,19 @@ function openOrganizationProfile(props?: OrganizationProfileProps): void;
   clerk.openOrganizationProfile(orgProfileDiv);
   ```
 
-  ```html filename="index.html" {11}
+  ```html filename="index.html" {21}
   <!-- Add a <div id="organization-profile"> element to your HTML -->
   <div id="organization-profile"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk Publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key="{{pub_key}}"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
 
   <script>
     window.addEventListener("load", async function () {
@@ -290,9 +320,19 @@ function closeOrganizationProfile(): void;
   clerk.closeOrganizationProfile(orgProfileDiv);
   ```
 
-  ```html filename="index.html" {11}
+  ```html filename="index.html" {21}
   <!-- Add a <div id="organization-profile"> element to your HTML -->
   <div id="organization-profile"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk Publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key="{{pub_key}}"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
 
   <script>
     window.addEventListener("load", async function () {
