--- a/docs/components/user/user-button.mdx
+++ b/docs/components/user/user-button.mdx
@@ -256,9 +256,19 @@ function mountUserButton(node: HTMLDivElement, props?: UserButtonProps): void;
   clerk.mountUserButton(userbuttonDiv);
   ```
 
-  ```html filename="index.html" {11}
+  ```html filename="index.html" {21}
   <!-- Add a <div id="user-button"> element to your HTML -->
   <div id="user-button"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk Publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key="{{pub_key}}"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
 
   <script>
     window.addEventListener("load", async function () {
@@ -315,9 +325,19 @@ function unmountUserButton(node: HTMLDivElement): void;
   clerk.unmountUserButton(userButtonDiv);
   ```
 
-  ```html filename="index.html" {15}
+  ```html filename="index.html" {25}
   <!-- Add a <div id="user-button"> element to your HTML -->
   <div id="user-button"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk Publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key="{{pub_key}}"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
 
   <script>
     window.addEventListener("load", async function () {
