--- a/docs/components/user/user-profile.mdx
+++ b/docs/components/user/user-profile.mdx
@@ -125,9 +125,19 @@ function mountUserProfile(node: HTMLDivElement, props?: UserProfileProps): void;
   clerk.mountUserProfile(userProfileDiv);
   ```
 
-  ```html filename="index.html" {11}
+  ```html filename="index.html" {21}
   <!-- Add a <div id="user-profile"> element to your HTML -->
   <div id="user-profile"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk Publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key="{{pub_key}}"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
 
   <script>
     window.addEventListener("load", async function () {
@@ -184,9 +194,19 @@ function unmountUserProfile(node: HTMLDivElement): void;
   clerk.unmountUserProfile(userProfileDiv);
   ```
 
-  ```html filename="index.html" {15}
+  ```html filename="index.html" {25}
   <!-- Add a <div id="user-profile"> element to your HTML -->
   <div id="user-profile"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk Publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key="{{pub_key}}"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
 
   <script>
     window.addEventListener("load", async function () {
@@ -243,9 +263,19 @@ function openUserProfile(props?: UserProfileProps): void;
   clerk.openUserProfile(userProfileDiv);
   ```
 
-  ```html filename="index.html" {11}
+  ```html filename="index.html" {21}
   <!-- Add a <div id="user-profile"> element to your HTML -->
   <div id="user-profile"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk Publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key="{{pub_key}}"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
 
   <script>
     window.addEventListener("load", async function () {
@@ -292,9 +322,19 @@ function closeUserProfile(): void;
   clerk.closeUserProfile(userProfileDiv);
   ```
 
-  ```html filename="index.html" {11}
+  ```html filename="index.html" {21}
   <!-- Add a <div id="user-profile"> element to your HTML -->
   <div id="user-profile"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk Publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key="{{pub_key}}"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
 
   <script>
     window.addEventListener("load", async function () {
