--- a/docs/custom-flows/user-impersonation.mdx
+++ b/docs/custom-flows/user-impersonation.mdx
@@ -100,81 +100,125 @@ The above JSON snippet shows what a Clerk session token looks like when a user i
 
 ### Detect impersonated sessions in the frontend
 
-When working with frontend (client-side) code, you can easily detect impersonated sessions and gain access to the actor ID or other information from the `act` claim.
+When working with client-side code, you can detect impersonated sessions and gain access to the actor ID or other information from the `act` claim.
 
-<CodeBlockTabs type="framework" options={["Next.js", "React", "JavaScript"]}>
-```jsx
-import { useAuth } from "@clerk/nextjs";
-import { withServerSideAuth } from "@clerk/nextjs";
+{/* TODO (DOCS-259): Add App Router example */}
 
-// SSR authentication context
-export const getServerSideProps = withServerSideAuth(
-  async ({ req }) => {
-    // The request is augmented with an auth object.
-    // The actor object is available in there.
-    const { userId, actor } = req.auth;
+<Tabs type="framework" items={["Next.js", "React", "JavaScript"]}>
+  <Tab>
+  ```jsx
+  import { useAuth } from "@clerk/nextjs";
+  import { withServerSideAuth } from "@clerk/nextjs";
 
-    return {
-      props: { userId, actor },
-    };
+  // SSR authentication context
+  export const getServerSideProps = withServerSideAuth(
+    async ({ req }) => {
+      // The request is augmented with an auth object.
+      // The actor object is available in there.
+      const { userId, actor } = req.auth;
+
+      return {
+        props: { userId, actor },
+      };
+    }
+  );
+
+  function Home({ userId, actor }) {
+    return (
+      <div>
+        Server side info:
+        <p>
+          {actor && <span>User {actor.sub} has </span>}
+          signed in as user {userId}
+        </p>
+
+        <ClientSideInfo />
+      </div>
+    )
   }
-);
 
-function Home({ userId, actor }) {
-  return (
-    <div>
-      Server side info:
-      <p>
-        {actor && <span>User {actor.sub} has </span>}
+  function ClientSideInfo() {
+    // Client-side authentication context.
+    const { userId, actor } = useAuth();
+
+    return (
+      <div>
+        Client side info:
+        <p>
+          {actor && <span>User {actor.sub} has </span>}
+          signed in as user {userId}
+        </p>
+      </div>
+    );
+  }
+  ```
+  </Tab>
+
+  <Tab>
+  ```jsx
+  import { useAuth } from "@clerk/react";
+
+  function Home() {
+    const { userId, actor } = useAuth();
+
+    return (
+      <div>
+        {actor && <span>user {actor.sub} has </span>}
         signed in as user {userId}
-      </p>
+      </div>
+    );
+  }
+  ```
+  </Tab>
 
-      <ClientSideInfo />
-    </div>
-  )
-}
+  <Tab>
+    <InjectKeys>
 
-function ClientSideInfo() {
-  // Client-side authentication context.
-  const { userId, actor } = useAuth();
+    <CodeBlockTabs type="npm-script" options={["NPM module", "<script>"]}>
+    ```js filename="main.js"
+    import Clerk from '@clerk/clerk-js';
 
-  return (
-    <div>
-      Client side info:
-      <p>
-        {actor && <span>User {actor.sub} has </span>}
-        signed in as user {userId}
-      </p>
-    </div>
-  );
-}
-```
+    // Initialize Clerk with your Clerk publishable key
+    const clerk = new Clerk("{{pub_key}}");
+    await clerk.load();
 
-```jsx
-import { useAuth } from "@clerk/react";
+    const { session } = clerk;
 
-function Home() {
-  const { userId, actor } = useAuth();
+    if (session.actor) {
+      const { actor, user } = session;
 
-  return (
-    <div>
-      {actor && <span>user {actor.sub} has </span>}
-      signed in as user {userId}
-    </div>
-  );
-}
-```
+      console.log(`User ${actor.sub} is signed in as user ${user.id}.`)
+    }
+    ```
 
-```js
-const { session } = window.Clerk;
+    ```html filename="index.html"
+    <script
+      async
+      crossorigin="anonymous"
+      data-clerk-publishable-key="{{pub_key}}"
+      src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+      type="text/javascript"
+    ></script>
 
-if (session.actor) {
-  const { actor, user } = session;
+    <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
 
-  console.log(`User ${actor.sub} is signed in as user ${user.id}.`)
-}
-```
-</CodeBlockTabs>
+      const { session } = Clerk;
+
+      if (session.actor) {
+        const { actor, user } = session;
+
+        console.log(`User ${actor.sub} is signed in as user ${user.id}.`)
+      }
+    });
+    </script>
+    ```
+    </CodeBlockTabs>
+
+    </InjectKeys>
+  </Tab>
+</Tabs>
 
 ### Detect impersonated sessions in the backend
 
