--- a/docs/references/javascript/organization/members.mdx
+++ b/docs/references/javascript/organization/members.mdx
@@ -383,12 +383,12 @@ The following example demonstrates how to use the organization membership method
       <pre id="response"></pre>
 
       <!-- Initialize Clerk with your
-      Clerk publishable key and Frontend API URL -->
+      Clerk Publishable key and Frontend API URL -->
       <script
         async
         crossorigin="anonymous"
-        data-clerk-publishable-key='{{pub_key}}'
-        src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+        data-clerk-publishable-key="{{pub_key}}"
+        src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
         type="text/javascript"
       ></script>
 
